--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,15 @@ sourceCompatibility = '9'
 targetCompatibility = '9'
 
 version = loaderVersion
-group = "com.wildermods"
-archivesBaseName = "wilderloader"
+group = "com.thegamecommunity.excite.loader"
+archivesBaseName = "excitemodderloader"
 
 dependencies {}
 
 jar {
 	manifest {
 		attributes(
-			'Main-Class': 'com.wildermods.wilderloader.Main',
+			'Main-Class': 'com.thegamecommunity.excite.loader.Main',
 			'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
 			'Specification-Version': 8.0,
 			'Multi-Release': 'true'
