--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ targetCompatibility = '9'
 
 version = loaderVersion
 group = "com.thegamecommunity.excite.loader"
-archivesBaseName = "excitemodderloader"
+archivesBaseName = "exciteModderLoader"
 
 dependencies {}
 
 jar {
 	manifest {
 		attributes(
-			'Main-Class': 'com.thegamecommunity.excite.loader.Main',
+			'Main-Class': 'com.thegamecommunity.excite.modding.loader.Main',
 			'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
 			'Specification-Version': 8.0,
 			'Multi-Release': 'true'
